Revise portfolio webpage layout and content
Updated content and structure of the portfolio webpage, including enhanced sections for About Me, Skills, and Contact information.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#portfolio">Portfolio</a>
-    <a href="projects.html">More About My Projects</a>
     <a href="#skills">Skills</a>
     <a href="#contact">Contact</a>
 
@@ -30,7 +29,7 @@
 <section id="home" class="hero">
 <img src="https://i.postimg.cc/c4PbPNsr/me.jpg" alt="Amala Mohan" class="profile-pic" />
 <h1>Amala Mohan</h1>
-<p class="tagline">Aspiring Computer Science Major | Problem Solver & Data Enthusiast</p>
+<p class="tagline">Aspiring Computer Science Enthusiast | Collaborative Team Player & Emerging Leader | Driven to Explore Beyond the Classroom</p>
 <p class="intro">
 I am a UBC student passionate about computer science and mathematics. I enjoy solving
 incomplete problems like puzzles, learning through mistakes, and growing through
@@ -44,45 +43,118 @@ academic challenges with resilience and curiosity.
 
 
 <section id="about" class="section">
-<h2>About Me</h2>
-<p>
-My academic journey has shaped my resilience, adaptability, and analytical mindset.
-I believe mistakes are essential to growth and that persistence leads to clarity.
-I enjoy collaborating with others, thinking creatively, and tackling problems that
-require structured reasoning.
+<h2> <p style="color:rgb(98, 192, 223)"> About Me </p></h2>
+
+I am a second-year student at the University of British Columbia, currently exploring 
+potential majors within Computer Science. My interest in CS is broad and has developed over time, 
+beginning in Grade 7 with robotics, which initially sparked my curiosity in cognition and systems. During high school, 
+I transitioned into programming-focused coursework, and more recently I have developed a strong interest in data analysis using 
+Python. This progression has allowed me to gain exposure to multiple areas of computer science while keeping my academic focus flexible
+and open to growth. I work effectively in team-oriented environments, having completed several group-intensive courses at UBC, including 
+SCIE 113 and LING 100, both of which emphasized long-term collaboration, presentations, and project-based work. In addition to teamwork, 
+I have demonstrated leadership by stepping into instructional roles during classical dance, painting classes, and even high school
+mathematics sessions when needed. I am known for being approachable, collaborative, and dependable, and I am highly motivated to continue 
+expanding my knowledge beyond the classroom, as I believe meaningful learning extends well beyond structured coursework.
 </p>
-<ul class="timeline">
-<li><strong>ASC PU College, Bangalore (Grades 11–12)</strong> – Top 1%, 93% average</li>
-<li><strong>S Cadambi Vidhya Kendra (Grades 8–10)</strong> – Straight A’s, ~80%+</li>
-<li><strong>Venus International School (Grades 1–7)</strong></li>
-</ul>
+
+<style>
+.timeline-container {
+  position: relative;
+  margin: 20px 0;
+  padding-left: 0px; 
+}
+
+.timeline-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 20px; 
+  width: 2px;
+  height: 100%;
+  background-color: #333; 
+}
+
+.timeline-item {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.timeline-marker {
+  position: absolute;
+  left: 12px; /* align with line */
+  width: 16px;
+  height: 16px;
+  background-color: #333; /* marker color */
+  border-radius: 50%;
+  top: 0;
+}
+
+.timeline-content {
+  padding-left: 40px; /* spacing from line */
+}
+</style>
+
+<div class="timeline-container">
+  <div class="timeline-item">
+    <div class="timeline-marker"></div>
+    <div class="timeline-content">
+      <h3>ASC PU College, Bangalore</h3>
+      <span class="timeline-date">Grades 11–12</span>
+      <p>Top 1%, 93% average</p>
+      <p><i>At ASC PU College, I actively participated in a wide range of extracurricular activities, 
+         including on-the-spot acts, debates, and dance competitions, which helped me develop creativity, 
+         confidence, and teamwork skills.Academically, I pursued advanced preparation for high-level Indian
+         science exams such as CET and JEE to strengthen my problem-solving and analytical abilities. 
+         Through dedication and consistent effort, I ranked in the top 1% of my class,
+         reflecting both my academic aptitude and commitment to continuous learning.</i></p>
+    </div>
+  </div>
+
+  <div class="timeline-item">
+    <div class="timeline-marker"></div>
+    <div class="timeline-content">
+      <h3>S Cadambi Vidhya Kendra, Bangalore</h3>
+      <span class="timeline-date">Grades 8–10</span>
+      <p>Straight A’s, ~80%+</p>
+      <p> <i>I occasionally took over classes, helping students understand mathematics
+           and supporting the main instructor in maintaining an engaging learning environment.
+           Beyond academics, I actively participated in debates, sports, and other extracurricular activities,
+           which helped me develop leadership, teamwork, and communication skills.
+           This experience strengthened my ability to adapt to different roles, work collaboratively, 
+           and contribute positively to both academic and co-curricular activities.</i></p>
+    </div>
+  </div>
+</div>
 
 
-<h3>Interests</h3>
-<p>Classical dance, robotics, singing, painting</p>
+
+<h3>Other Interests</h3>
+<p>Outside of academics, I am passionate about exploring creative and intellectual pursuits.
+   I enjoy problem-solving through puzzles, engaging in classical dance, and participating in debates and public speaking.
+    I am also interested in technology, coding, and data analysis, and I enjoy applying logical thinking to real-world challenges.
+   These interests help me maintain a balanced perspective, foster curiosity, and continuously develop both my analytical 
+   and creative skills. </p>
 </section>
 
-
 <section id="portfolio" class="section">
-<h2>Portfolio</h2>
+<h2><p style="color:rgb(98, 192, 223)">Portfolio</p></h2>
 <div class="project-grid">
 
-
-<a class="project-card" href="project-financial.html">
+<a class="project-card" href="project-financial.html" style="color: rgb(12, 12, 12);">
 <h3>Company Financial Statement Analysis</h3>
 <p>Analyzing profit margins and trends using structured financial data.</p>
 <span>Python • Matplotlib • Data Analysis</span>
 </a>
 
 
-<a class="project-card" href="project-comparative.html">
+<a class="project-card" href="project-comparative.html" style="color: rgb(0, 0, 0);">
 <h3>Comparative Stock Performance</h3>
 <p>Understanding why companies outperform others post-pandemic.</p>
 <span>Python • CSV • Visualization</span>
 </a>
 
 
-<a class="project-card" href="project-trends.html">
+<a class="project-card" href="project-trends.html" style="color: rgb(0, 0, 0);">
 <h3>Stock Trend Analysis (2020–2025)</h3>
 <p>Market recovery and cross-company trend evaluation.</p>
 <span>Python • Data Science • Economics</span>
@@ -94,28 +166,53 @@ require structured reasoning.
 
 
 <section id="skills" class="section">
-<h2>Skills & Expertise</h2>
-<ul class="skills">
-<li>Python, Java, C++, HTML, SQL</li>
-<li>IBM, Stanford, DeepLearning.AI (AI & Data Science)</li>
-<li>Analytical thinking, teamwork, creative problem-solving</li>
-</ul>
+  <h2><p style="color:rgb(98, 192, 223)">Skills & Expertise</p></h2>
+  
+  <div class="skills-container">
+
+    <div class="skill-category">
+      <h3>Programming & Development</h3>
+      <ul>
+        <li><strong>Python, Java, C++, HTML, SQL</strong> – Experienced in writing clean, efficient code, developing algorithms, and building applications and data-driven projects.</li>
+        <li>Hands-on experience with data manipulation, visualization, and software development.</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3>AI & Data Science</h3>
+      <ul>
+        <li>Completed courses and certifications from <strong>IBM, Stanford, DeepLearning.AI</strong> focused on machine learning, deep learning, and data analytics.</li>
+        <li>Practical knowledge of building predictive models, analyzing datasets, and applying AI techniques to real-world problems.</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3>Analytical & Problem-Solving</h3>
+      <ul>
+        <li>Strong <strong>analytical thinking</strong> with the ability to break complex problems into manageable steps.</li>
+        <li>Creative approach to <strong>problem-solving</strong>, combining logical reasoning with innovative solutions.</li>
+        <li>Experience in collaborative environments, demonstrating <strong>teamwork, communication, and leadership</strong>.</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3>Additional Competencies</h3>
+      <ul>
+        <li>Quick learner, adaptable to new technologies and frameworks.</li>
+        <li>Passionate about applying computational thinking to academic and real-world challenges.</li>
+      </ul>
+    </div>
+
+  </div>
 </section>
 
 
+
 <section id="contact" class="section">
-<h2>Contact</h2>
-<p>Email: <a href="mailto:amohan07@student.ubc.ca">amohan07@student.ubc.ca</a></p>
-<p>Email: <a href="mailto:amuottawa5@gmail.com">amuottawa5@gmail.com</a></p>
-<p>LinkedIn: <a href="https://www.linkedin.com/in/amala-mohan-62586a33b" target="_blank">View Profile</a></p>
-
-
-<form class="contact-form">
-<input type="text" placeholder="Name" required />
-<input type="email" placeholder="Email" required />
-<textarea placeholder="Message" rows="4"></textarea>
-<button type="submit" class="btn">Send</button>
-</form>
+<h2><p style="color:rgb(98, 192, 223)">Contact</p></h2>
+<p style="color:#333">Email: <a href="mailto:amohan07@student.ubc.ca" style="color: blue;">amohan07@student.ubc.ca</a></p>
+<p style="color:#333">Email: <a href="mailto:amuottawa5@gmail.com" style="color: blue;">amuottawa5@gmail.com</a></p>
+<p style="color:#333">LinkedIn: <a href="https://www.linkedin.com/in/amala-mohan-62586a33b" style="color: blue;" target="_blank">Click_to_View_My_Profile</a></p>
 </section>
 
 
