--- a/project-trends.html
+++ b/project-trends.html
@@ -12,7 +12,7 @@
   <div class="logo">Amala Mohan</div>
   <nav>
     <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
+    <button id="theme-toggle" class="btn secondary">🌙</button>
   </nav>
 </header>
 
@@ -86,6 +86,7 @@
     plot_price_trend(analysis)
  </code></pre>
 
+  <p>View full code on GitHub: <a href="https://github.com/amumo05/stock-market-analysis-01/tree/main" target="_blank">click to check the code </a></p>
   <h2>What I Learned</h2>
   <p>
     This project significantly improved my ability to work with time-series data and
@@ -100,12 +101,27 @@
     real-world events.
   </p>
 
-  <a href="projects.html" class="btn">Back to Projects</a>
+  <a href="index.html" class="btn">Back to Home</a>
 </section>
 
 <footer class="footer">
   © 2025 Amala Mohan
 </footer>
 
+<script>
+  const toggle = document.getElementById("theme-toggle");
+  const root = document.documentElement;
+
+  toggle.addEventListener("click", () => {
+    const current = root.getAttribute("data-theme");
+    if (current === "dark") {
+      root.removeAttribute("data-theme");
+      toggle.textContent = "🌙";
+    } else {
+      root.setAttribute("data-theme", "dark");
+      toggle.textContent = "☀️";
+    }
+  });
+</script>
 </body>
 </html>
