Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ expanding my knowledge beyond the classroom, as I believe meaningful learning ex
 <section id="contact" class="section">
 <h2><p style="color:rgb(98, 192, 223)">Contact</p></h2>
 <p style="color:#333">Email: <a href="mailto:amuottawa5@gmail.com" style="color: blue;">amuottawa5@gmail.com</a></p>
-<p style="color:#333">LinkedIn: <a href="https://www.linkedin.com/in/amala-mohan-62586a33b" style="color: blue;" target="_blank">Click_to_View_My_Profile</a></p>
+<p style="color:#333">LinkedIn: <a href="https://www.linkedin.com/in/amala-mohan-62586a33b" style="color: blue;" target="_blank">AMALA MOHAN</a></p>
 </section>
 
 
@@ -236,4 +236,5 @@ expanding my knowledge beyond the classroom, as I believe meaningful learning ex
 
 </body>
 </html>
+
 
