--- a/project-financial.html
+++ b/project-financial.html
@@ -85,7 +85,7 @@ def analyze(loc:CompanyRecordList, company: str) -> Produced:
 
   </code></pre>
    
-  <p>View full code on GitHub: <a href="https://github.com/amumo05/different-company-financial-statements-/blob/main/company%20financial%20statments%20data%20set.ipynb" target="_blank">click to check the code </a></p>
+  <p>View full code on GitHub: <a href="https://github.com/amumo05/different-company-financial-statements-" target="_blank">click to check the code </a></p>
   <h2>What I Learned</h2>
   <p>
     This project helped me strengthen my understanding of structured data modeling
@@ -125,5 +125,6 @@ def analyze(loc:CompanyRecordList, company: str) -> Produced:
 
 </body>
 </html>
+
 
 
