Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <section id="home" class="hero">
-<img src="https://i.postimg.cc/c4PbPNsr/me.jpg" alt="Amala Mohan" class="profile-pic" />
+<img src="https://i.postimg.cc/nrdFGmcR/Whats-App-Image-2025-12-30-at-23-58-33.jpg" alt="Amala Mohan" class="profile-pic" />
 <h1>Amala Mohan</h1>
 <p class="tagline">Aspiring Computer Science Enthusiast | Collaborative Team Player & Emerging Leader | Driven to Explore Beyond the Classroom</p>
 <p class="intro">
@@ -236,5 +236,6 @@ expanding my knowledge beyond the classroom, as I believe meaningful learning ex
 
 </body>
 </html>
+
 
 
